--- a/css/contacto.css
+++ b/css/contacto.css
@@ -3,7 +3,9 @@
 
 body{
     background-color: rgb(1, 2, 4);
-    background-image: url(imagenes/aspectos/Vayne_0.jpg);
+    background-image: url(../imagenes/aspectos/Vayne_0.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
     padding-left: 150px;
     padding-right: 150px;
     padding-top: 10px;
