--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,10 @@
  /*index.css*/
 body{
     background-color: rgb(1, 2, 4);
-    background-image: url(imagenes/aspectos/Vayne_0.jpg);
+    background-image: url(../imagenes/aspectos/Vayne_0.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-attachment: fixed;
     padding-left: 150px;
     padding-right: 150px;
     padding-top: 10px;
