--- a/css/index.css
+++ b/css/index.css
@@ -30,6 +30,10 @@ header h2 {
     color: #dedede;
     text-align: center;
 }
+nav ul li{
+	list-style-type: none;
+	display:inline;
+}
 
 nav a{
     
